<resources>
    <string name="app_name">Dazzle</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="stylists">Stylists</string>
    <string name="my_bookings">My Bookings</string>
    <string name="favourites">Favourites</string>
    <string name="virtual_makeover">Virtual Makeover</string>
    <string name="account">My Account</string>
    <string name="sign_join">Log in or Register</string>
    <string name="action_search">Search</string>
    <string name="action_booking">Bookings</string>
    <string name="search_hint">Styles · Stylists · Products</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_register_quote">\"<b>GREAT HAIR</b> doesn\'t happen by chance. \nIt happens by <b>APPOINTMENT</b>.\"</string>
    <string name="login_quote">\"Life isn\'t <b>PERFECT</b>\n but your <b>HAIR</b> can be.\"</string>
    <string name="register_quote">\"<b>BEAUTY</b>\n comes from the inside… \nInside the <b>SALON</b>\"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gallery">Gallery</string>
    <string name="products">Products</string>
    <string name="style">Style</string>
    <string name="product">Product</string>
    <string name="what_to_add">What type of item would you like to add?</string>
    <string name="what_style_category">What category does your style belong to?</string>
    <string name="hair">Hair</string>
    <string name="hair_style">Hair Style</string>
    <string name="hair_style_subtext">Hair-related styles</string>
    <string name="manicure_style">Manicure</string>
    <string name="manicure_style_subtext">Beauty styles for the hands</string>
    <string name="pedicure_style">Pedicure</string>
    <string name="pedicure_style_subtext">Beauty styles for the feet</string>
    <string name="more">More</string>
    <string name="just_a_little_more">Just a little more about your style...</string>
    <string name="title">Title</string>
    <string name="name_of_style">Name of style</string>
    <string name="price_of_style">Pricing</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="description_extra">Tell other peple what your style is all about. Help them get to know why you love the style and so on.</string>
    <string name="price_extra">Pricing on a style solely depends on you. We do not automate the amounts on any level.</string>
    <string name="continue_txt">Continue</string>
    <string name="time_of_style">Time It Takes</string>
    <string name="time">Time</string>
    <string name="products_used">Products used</string>
    <string name="products_used_extra">Mention the different products used to make the style successful such as gels, sprays etc. Brand names are encouraged.</string>
    <string name="tell_us_details">Tells us something about your style</string>
    <string name="upload_pictures">Upload pictures of your style</string>
    <string name="upload_pictures_extra">They say a picture is a thousand words. Showcase your styles with photos.</string>
    <!-- CropView -->
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate Left</string>
    <string name="crop_image_menu_rotate_right">Rotate Right</string>
    <string name="crop_image_menu_crop">Done</string>
    <string name="pick_image_intent_chooser_title">Pick Image</string>
    <string name="done">Done</string>
    <string name="style_category">Style Category</string>
    <string name="style_details">Style Details</string>
    <string name="more_details">More Details</string>
    <string name="add_images">Add Images</string>
    <string name="list_item">List Your Item</string>
    <string name="about_style">About your style</string>
    <string name="base_url">http://smoothvalley.com/gl/public/v1/</string>
    <string name="location">Location</string>
    <string name="what_county">What county are you in?</string>
    <string name="name_of_county">Pick your county</string>
    <string name="county">County</string>
    <string name="location_label">Select a location closest to you</string>
    <string name="set_location">Set Location</string>
    <string name="view_profile">View Profile</string>
    <string name="log_out">Log Out</string>
    <string name="stylists_around">Stylists</string>
    <string name="apply">Book</string>
    <string name="book_me">Book Me</string>
    <string name="working_hours">Working Hours</string>
    <string name="action_share">Share</string>
    <string name="member_since">Member since</string>
    <string name="pick_a_date">Pick a day</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="current_date">June, 2016</string>
    <string name="last_date">30</string>
    <string name="what_day">What date would you like to book?</string>
    <string name="AM">AM</string>
    <string name="pm">PM</string>
    <string name="what_time">What time of day do you want?</string>
    <string name="pick_a_time">Time of day</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="see_all"><![CDATA[See all >]]></string>
    <string name="styles_around">Styles</string>
    <string name="just_booked">Just booked</string>
    <string name="categories">Categories</string>
    <string name="style_description_dummy">Short female cut popular during the 1960s and early 70s. The hair was cut over the ears, leaving a fringe in front of the ears, often brushed toward the face or straight down. The nape hair was cut along the hairline like a boys but more rounded instead of squared off like a man’s neckline.</string>
    <string name="expand">See More</string>
    <string name="collapse">Read less..</string>
    <string name="review">This is an amazing style to bring out your eyes. It is appropriate for all occassions and looks amazing to every hair type color.</string>
    <string name="dummy_products">· Nice and lovely hair food\n· TCB Hair Relaxer</string>
    <string name="get_this">Get this</string>
    <string name="payment">Payment</string>
    <string name="how_to_pay">How would you like to pay?</string>
    <string name="cash">Cash</string>
    <string name="mpesa">Mpesa</string>
    <string name="add_note">Add a note</string>
    <string name="cash_payment_subtext">To be paid</string>
    <string name="mpesa_payment_subtext">Paid with</string>
    <string name="booking_successful">Booking Successful!</string>
    <string name="booking_successful_details">Your appointment has been successfully booked. Go to My Bookings to keep up with the appointment deadlines.</string>
    <string name="got_to_my_bookings">View my Bookings</string>
    <string name="back_to_explore">Back to explore</string>
    <string name="empty_bookings">No history found</string>
    <string name="empty_upcoming_appointments_title">No appointments set</string>
    <string name="empty_upcoming_appointments_sub_title">Appointments you book will be listed here. Add one today!</string>
    <string name="empty_history_title">No history found</string>
    <string name="empty_history_sub_title">Appointments you have previously booked will be listed here.</string>
    <string name="available_services">Available services</string>
    <string name="details">Details</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_details">Toggle app notifications</string>
    <string name="appointment_notifications">Upcoming appointments</string>
    <string name="appointment_notifications_details">Get notified when an appointment is due</string>
    <string name="early_notifications">Notify before appointment is due</string>
    <string name="favourites_styles">Favourite Styles</string>
    <string name="notifications_settings">Notificatons Settings</string>
</resources>
