<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.ctrlplusz.anytextview.AnyTextView
                android:id="@+id/page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:padding="30dp"
                android:text="@string/tell_us_details"
                android:textColor="@color/grey_2"
                android:textSize="22sp"
                app:typeface="NirmalaB.ttf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/page_title"
                android:orientation="vertical">

                <com.ctrlplusz.anytextview.AnyTextView
                    android:id="@+id/name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:layout_toRightOf="@+id/manicure_icon"
                    android:text="@string/name_of_style"
                    android:textColor="@color/grey"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:typeface="Nirmala.ttf" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/name"
                    android:padding="10dp" />

                <com.ctrlplusz.anytextview.AnyTextView
                    android:id="@+id/price_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:layout_toRightOf="@+id/manicure_icon"
                    android:text="@string/price_of_style"
                    android:textColor="@color/grey"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:typeface="Nirmala.ttf" />

                <EditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/amount"
                    android:inputType="numberDecimal"
                    android:padding="10dp" />

                <com.ctrlplusz.anytextview.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/price_extra"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp"
                    app:typeface="Nirmala.ttf" />

                <com.ctrlplusz.anytextview.AnyTextView
                    android:id="@+id/description_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:layout_toRightOf="@+id/manicure_icon"
                    android:text="@string/description"
                    android:textColor="@color/grey"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:typeface="Nirmala.ttf" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="top|left"
                    android:hint="@string/about_style"
                    android:inputType="textMultiLine|textCapSentences"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="6"
                    android:padding="10dp" />

                <com.ctrlplusz.anytextview.AnyTextView
                    android:id="@+id/hair_sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/description_extra"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp"
                    app:typeface="Nirmala.ttf" />

                <Button
                    android:id="@+id/continue_btn"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
                    android:background="@drawable/red_button_shape"
                    android:clickable="true"
                    android:text="@string/continue_txt"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>