<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    android:orientation="vertical">

    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/what_county"
        android:textColor="@color/grey_2"
        android:textSize="22sp"
        app:typeface="NirmalaB.ttf" />

    <AutoCompleteTextView
        android:id="@+id/county"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/page_title"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/county"
        android:padding="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/county">

        <com.ctrlplusz.anytextview.AnyTextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:paddingLeft="5dp"
            android:text="@string/location_label"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:textStyle="bold"
            app:typeface="Nirmala.ttf" />

        <AutoCompleteTextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_title"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/location"
            android:padding="10dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/done_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/red_button_shape"
        android:clickable="true"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="invisible" />

</RelativeLayout>