<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_thank_you" />

        <com.ctrlplusz.anytextview.AnyTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:layout_centerHorizontal="true"
            android:maxLines="1"
            android:text="@string/booking_successful"
            android:textColor="@color/grey"
            android:textSize="22sp"
            android:textStyle="bold"
            app:typeface="NirmalaB.ttf" />

        <com.ctrlplusz.anytextview.AnyTextView
            android:id="@+id/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:text="@string/booking_successful_details"
            android:textColor="@color/grey_2"
            android:textSize="15sp"
            app:typeface="Nirmala.ttf" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/my_bookings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/style_button_shape"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/got_to_my_bookings"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/back_to_explore"
            android:textAllCaps="false"
            android:textColor="@color/mauvre"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>